Fix: code wrap and script location error.

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,7 @@
     cursor: pointer;
     padding: 10px;
 }
+
+pre[data-lang="comment"] > code {
+    overflow-wrap: break-word;
+}
